Adiciona comandos de SWAP e MEETING

--- a/ALG1_TP1/CMakeLists.txt
+++ b/ALG1_TP1/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ALG1_TP1)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(ALG1_TP1 main.cpp Grafo.cpp Grafo.h)
+add_executable(ALG1_TP1 main.cpp Grafo.cpp Grafo.h Orquestrador.cpp Orquestrador.h)
